Switch to Ollama integration. Update README and configuration files accordingly.