@@ -2,24 +2,37 @@ Summarization Service Quarkus application
 
 inspired by : https://docs.quarkiverse.io/quarkus-langchain4j/dev/quickstart-summarization.html#
 
-### Environment
-1) Java 25
-```bash
+### Java
+Install Java 25:
+```aiignore
 sdk use java 25.0.2-open
 ```
-2) TornadoVM
+
+### Ollama
+1) Install Ollama:
+```bash
+curl -fsSL https://ollama.com/install.sh | sh
+ollama --version # ollama version is 0.19.0
+```
+2) Pull the model (Llama3.2, 1B, Q8_0):
 ``` bash
-sdk use tornadovm 3.0.0-jdk25-ptx
+ollama pull llama3.2:1b-instruct-q8_0
+```
+3) Export Ollama local server URL:
+```
+export OLLAMA_API_BASE=http://127.0.0.1:11434
+```
+4) Setup Ollama local server: 
+```bash
+ollama serve llama3.2:1b-instruct-q8_0
 ```
 
-3) Manual Clone and Build Quarkus-langchain4j to enable jdk25 support:
-- `Note: As of 2/4/2026 Quarkus-langchain4j artifacts are not compiled with jdk25; hence we need to build from source.` 
+### Quarkus-langchain4j
 ```bash
 git clone https://github.com/quarkiverse/quarkus-langchain4j.git
-cd ~/quarkus-langchain4j/model-provivers/gpu-llama3
-mvn clean install -DskipTests -DTornado
+cd ~/quarkus-langchain4j/model-providers/ollama
+mvn clean install -DskipTests
 ```
-
 ### Build
 Build all demos:
 ```bash
@@ -30,16 +43,10 @@ mvn clean install
 ### Run:
 Run chat-demo:
 ``` bash
-java @$TORNADOVM_HOME/tornado-argfile \
-    --add-modules jdk.incubator.vector \
-    -Dtornado.device.memory=15GB \
-    -jar demos/chat-demo/target/quarkus-app/quarkus-run.jar
+java -jar demos/chat-demo/target/quarkus-app/quarkus-run.jar
 ```
 
-Run streaming-demo:
+Run streaming-demo (not tested):
 ``` bash
-java @$TORNADOVM_HOME/tornado-argfile \
-    --add-modules jdk.incubator.vector \
-    -Dtornado.device.memory=15GB \
-    -jar demos/streaming-demo/target/quarkus-app/quarkus-run.jar
+java -jar demos/streaming-demo/target/quarkus-app/quarkus-run.jar
 ```
